infra/cert-test/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: cloudloop-prod
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
