infra/cert-test/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  namespace: cloudloop-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - cloudloop.io
    secretName: cloudloop.io-tls
  rules:
  - host: cloudloop.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
